well just test != from blank and avoid null check latencyListeners canno -t be null